Add social metadata

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,23 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
+
+    <meta name="title" content="Critter Collector">
+    <meta name="description" content="Track the fish and bugs you've caught in Animal Crossing: New Horizons, and see what you need to catch before they leave this month!">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://critter-collector.com/">
+    <meta property="og:title" content="Critter Collector">
+    <meta property="og:description" content="Track the fish and bugs you've caught in Animal Crossing: New Horizons, and see what you need to catch before they leave this month!">
+    <meta property="og:image" content="/images/social.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://critter-collector.com/">
+    <meta property="twitter:title" content="Critter Collector">
+    <meta property="twitter:description" content="Track the fish and bugs you've caught in Animal Crossing: New Horizons, and see what you need to catch before they leave this month!">
+    <meta property="twitter:image" content="/images/social.png">
   </head>
   <body>
     <noscript>
