Use absolute urls for social images

--- a/public/index.html
+++ b/public/index.html
@@ -19,14 +19,14 @@
     <meta property="og:url" content="https://critter-collector.com/">
     <meta property="og:title" content="Critter Collector">
     <meta property="og:description" content="Track the fish and bugs you've caught in Animal Crossing: New Horizons, and see what you need to catch before they leave this month!">
-    <meta property="og:image" content="<%= BASE_URL %>img/social.png">
+    <meta property="og:image" content="https://critter-collector.com/img/social.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://critter-collector.com/">
     <meta property="twitter:title" content="Critter Collector">
     <meta property="twitter:description" content="Track the fish and bugs you've caught in Animal Crossing: New Horizons, and see what you need to catch before they leave this month!">
-    <meta property="twitter:image" content="<%= BASE_URL %>img/social.png">
+    <meta property="twitter:image" content="https://critter-collector.com/img/social.png">
   </head>
   <body>
     <noscript>
